--- a/examples/boxes.html
+++ b/examples/boxes.html
@@ -12,8 +12,8 @@
 </head>
 <body data-tuktuk="boxes">
 
-    <aside id="menu" class="dark absolute">
-        <header>
+    <aside id="menu" class="bck dark absolute">
+        <header class="bck darkest">
             <div class="session">
                 <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="avatar"/>
                 <strong class="text">logged in as <a href="#" class="active">soyjavi</a></strong>
@@ -33,8 +33,8 @@
         </article>
     </aside>
 
-    <aside class="light">
-        <header class="text center">
+    <aside class="bck lightest">
+        <header class="text center bck theme">
             <div class="inline on-left">
                 <button class="tiny secondary icon cog" data-tuktuk-box="menu"></button>
             </div>
@@ -86,7 +86,7 @@
         </article>
     </aside>
 
-    <section>
+    <section class="bck light text white">
         <header>
             <nav class="on-left text bold" data-filter="slidus">
                 <a href="#" class="active">item.active<small>small</small></a>
@@ -155,7 +155,7 @@
     <script src="components/jquery/jquery.js"></script>
     <script src="../package/tuktuk.js"></script>
     <script>
-        TukTuk.Modal.show("modal");
+        // TukTuk.Modal.show("modal");
         // TukTuk.Box.show("menu");
 
         // TukTuk.Modal.loading();
