--- a/index.html
+++ b/index.html
@@ -99,64 +99,64 @@
 
     <!-- ========================== COLUMNS ========================== -->
     <section class="padding bck lightest text center">
-        <div class="row ">
+        <div class="row text thin">
             <div class="column_10 offset_1 margin-bottom">
                 <h1 class="text color theme">Turn it up to 12 columns</h1>
-                <h3 class="text thin">Tuktuk is divided horizontally into a series of 12 columns, and vertically into rows. 12 columns divide nicely into equal columns of two, three, four, or six columns.</h3>
+                <h3>Tuktuk is divided horizontally into a series of 12 columns, and vertically into rows. 12 columns divide nicely into equal columns of two, three, four, or six columns.</h3>
              </div>
         </div>
         <div class="row margin-bottom">
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
-            <div class="column_1 bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
+            <div class="column_1 radius bck light padding-top padding-bottom">1</div>
         </div>
         <div class="row margin-bottom">
-            <div class="column_4 bck light padding-top padding-bottom">4</div>
-            <div class="column_4 bck light padding-top padding-bottom">4</div>
-            <div class="column_4 bck light padding-top padding-bottom">4</div>
+            <div class="column_4 radius bck light padding-top padding-bottom">4</div>
+            <div class="column_4 radius bck light padding-top padding-bottom">4</div>
+            <div class="column_4 radius bck light padding-top padding-bottom">4</div>
         </div>
         <div class="row margin-bottom">
-            <div class="column_4 bck light padding-top padding-bottom ">4</div>
-            <div class="column_8 bck light padding-top padding-bottom">8</div>
+            <div class="column_4 radius bck light padding-top padding-bottom ">4</div>
+            <div class="column_8 radius bck light padding-top padding-bottom">8</div>
         </div>
         <div class="row margin-bottom">
-            <div class="column_6 bck light padding-top padding-bottom">6</div>
-            <div class="column_6 bck light padding-top padding-bottom">6</div>
+            <div class="column_6 radius bck light padding-top padding-bottom">6</div>
+            <div class="column_6 radius bck light padding-top padding-bottom">6</div>
         </div>
         <div class="row">
-            <div class="column_12 bck light padding-top padding-bottom">12</div>
+            <div class="column_12 radius bck light padding-top padding-bottom">12</div>
         </div>
     </section>
 
 
     <!-- ========================== OFFSETS ========================== -->
     <section class="padding bck light text center">
-        <div class="row ">
+        <div class="row text thin">
             <div class="column_10 offset_1 margin-bottom">
                 <h1 class="text color theme">Offsetting columns</h1>
-                <h3 class="text thin">You have the option to offset a column, which should make life a little bit easier if you you need to add extra spacing between columns.</h3>
+                <h3>You have the option to offset a column, which should make life a little bit easier if you you need to add extra spacing between columns.</h3>
              </div>
         </div>
 
         <div class="row margin-bottom">
-            <div class="column_4 bck lightest padding-top padding-bottom">4</div>
-            <div class="column_4 offset_4 bck dark text color white padding-top padding-bottom">4 with 4 offset</div>
+            <div class="column_4 radius bck lightest padding-top padding-bottom">4</div>
+            <div class="column_4 offset_4 radius bck dark text color white padding-top padding-bottom">4 with 4 offset</div>
         </div>
         <div class="row margin-bottom">
-            <div class="column_3 offset_3 bck dark text color white padding-top padding-bottom">3 with 3 offset</div>
-            <div class="column_3 offset_3 bck dark text color white padding-top padding-bottom">3 with 3 offset</div>
+            <div class="column_3 offset_3 radius bck dark text color white padding-top padding-bottom">3 with 3 offset</div>
+            <div class="column_3 offset_3 radius bck dark text color white padding-top padding-bottom">3 with 3 offset</div>
         </div>
         <div class="row">
-            <div class="column_8 offset_4 bck dark text color white padding-top padding-bottom">8 with 4 offset</div>
+            <div class="column_8 offset_4 radius bck dark text color white padding-top padding-bottom">8 with 4 offset</div>
         </div>
     </section>
 
@@ -164,9 +164,9 @@
     <!-- ========================== HEADINGS ========================== -->
     <section class="padding bck lightest">
         <div class="row margin-bottom">
-            <div class="column_10 offset_1 text center">
+            <div class="column_10 offset_1 text center thin">
                 <h1 class="text color theme">Headings</h1>
-                <h3 class="text thin">You can use headings in a way optimized for each device.</h3>
+                <h3>You can use headings in a way optimized for each device.</h3>
              </div>
          </div>
 
@@ -184,9 +184,9 @@
     <!-- ========================== BUTTONS ========================== -->
     <section class="padding bck light">
         <div class="row ">
-            <div class="column_10 offset_1 text center margin-bottom">
+            <div class="column_10 offset_1 text thin center margin-bottom">
                 <h1 class="text color theme">Buttons</h1>
-                <h3 class="text thin">a site without buttons? Tuktuk has a gallery of styles and sizes that will be enough to interact with your site.</h3>
+                <h3>a site without buttons? Tuktuk has a gallery of styles and sizes that will be enough to interact with your site.</h3>
              </div>
         </div>
         <div class="row margin-bottom">
@@ -194,8 +194,8 @@
                   <a href="#" class="button large">Large</a>
                   <a href="#" class="button ">Normal</a>
                   <a href="#" class="button secondary">Secondary</a>
-                  <a href="#" class="button small">Small</a>
-                  <a href="#" class="button tiny">Tiny</a>
+                  <a href="#" class="button small success">Small</a>
+                  <a href="#" class="button tiny alert">Tiny</a>
               </div>
             <div class="column_4">
                 <a href="#" class="button anchor margin-top">Anchor</a>
@@ -203,11 +203,11 @@
         </div>
         <div class="row margin-bottom">
             <div class="column_8 ">
-                  <a href="#" class="button large"><span class="icon ok"></span>Large</a>
+                  <a href="#" class="button large "><span class="icon ok"></span>Large</a>
                   <a href="#" class="button "><span class="icon ok"></span>Normal</a>
                   <a href="#" class="button secondary"><span class="icon ok"></span>Secondary</a>
-                  <a href="#" class="button accept"><span class="icon ok"></span>Accept</a>
-                  <a href="#" class="button tiny"><span class="icon ok"></span>Tiny</a>
+                  <a href="#" class="button small success"><span class="icon ok"></span>Small</a>
+                  <a href="#" class="button tiny alert"><span class="icon ok"></span>Tiny</a>
               </div>
             <div class="column_4">
                 <a href="#" class="button anchor margin-top"><span class="icon ok"></span>Anchor</a>
@@ -219,8 +219,8 @@
                   <a href="#" class="button large icon ok"></a>
                   <a href="#" class="button icon ok"></a>
                   <a href="#" class="button secondary icon ok"></a>
-                  <a href="#" class="button small icon ok"></a>
-                  <a href="#" class="button tiny icon ok"></a>
+                  <a href="#" class="button small icon ok success"></a>
+                  <a href="#" class="button tiny icon ok alert"></a>
               </div>
             <div class="column_4">
                 <a href="#" class="button anchor icon ok margin-top"></a>
@@ -309,10 +309,10 @@
 
     <!-- ========================== FORMS & TABLES ========================== -->
     <section class="padding bck light">
-         <div class="row margin-bottom">
+         <div class="row margin-bottom text thin">
                 <div class="column_10 offset_1 text center">
                 <h1 class="text color theme">Forms & Tables</h1>
-                <h3 class="text thin">Make forms look gorgeous regardless of device and browser.</h3>
+                <h3>Make forms look gorgeous regardless of device and browser.</h3>
              </div>
          </div>
 
@@ -323,12 +323,12 @@
                             <label>Label example</label>
                             <input type="text" name="name" id="name" />
                             <fieldset>
-                                <label>Required:<span>on .error class</span></label>
+                                <label>Required:<small>on .error class</small></label>
                                 <input type="text" name="name" id="name" required />
                             </fieldset>
 
                             <fieldset>
-                                <label>This is a Drop down:<span>Please select one option</span></label>
+                                <label>This is a Drop down:<small>Please select one option</small></label>
                                 <select id="dropdown">
                                     <option>Select something...</option>
                                     <option>Drop down 01</option>
@@ -336,7 +336,7 @@
                                 </select>
                             </fieldset>
                             <fieldset>
-                                <label>Feedback:<span >You can write your comments here</span></label>
+                                <label>Feedback:<small>You can write your comments here</small></label>
                                 <textarea></textarea>
                             </fieldset>
 
@@ -499,10 +499,10 @@
              </div>
         </div>
     </section>
-    <section class="bck light underline navigation ">
+    <section class="bck dark">
         <div class="row text center">
             <nav class="group text bold">
-                <a href="#" class="active"><span class="icon folder"></span>Slides</a>
+                <a href="#" class="active"><span class="icon ok"></span>Slides</a>
                 <a href="#"><span class="icon ok"></span>Themes</a>
                 <a href="#"><span class="icon ok"></span>Applications</a>
                 <a href="#"><span class="icon ok"></span>Friends</a>
@@ -513,38 +513,33 @@
 
 
     <!-- ========================== Modals ========================== -->
-    <section class="padding bck lightest">
-        <div class="row ">
+    <section class="padding bck light">
+        <div class="row">
             <div class="column_10 offset_1 text center">
                 <h1 class="text color theme">Modals</h1>
                 <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
              </div>
         </div>
-    </section>
-    <section class="bck">
-        <div class="row">
-            <button class="large column_3" data-tuktuk-modal="default_modal">Default</button>
-            <button class="large column_3 secondary" data-tuktuk-modal="small_modal">column_6</button>
-            <button class="large column_3 secondary" data-tuktuk-modal="big_modal">column_8</button>
+        <div class="row margin-top margin-bottom text center">
+            <button class="large column_4" data-tuktuk-modal="default_modal">Default</button>
+            <button class="large column_4 secondary" data-tuktuk-modal="small_modal">column_6</button>
+            <button class="large column_4 alert" data-tuktuk-modal="big_modal">column_8</button>
         </div>
     </section>
 
 
     <!-- ========================== Widgets ========================== -->
-    <section class="padding bck light">
-        <div class="row ">
+    <section class="padding bck lightest">
+        <div class="row text thin">
             <div class="column_10 offset_1 text center margin-bottom">
-                <h1 class="text color theme">Widgets</h1>
-                <h3 class="text thin">If all of the above isn't enough, take a look at how you can easily extend TukTuk's functionality in your projects.</h3>
+                <h1 class="text color theme">tuktuk.<strong>icons</strong>.css</h1>
+                <h3>If all of the above isn't enough, take a look at how you can easily extend TukTuk's functionality in your projects.</h3>
              </div>
         </div>
 
         <div class="row">
-            <div class="column_6">
-                <h4>tuktuk.widget.<span class="text bold">icon</span>.css</h4>
-                <div class="margin-bottom">A small embeded library of icons in CSS.</div>
+            <div class="column_12">
                 <table>
-
                     <tbody>
                         <tr>
                             <td class="text center">
@@ -582,14 +577,6 @@
                     </tbody>
                 </table>
             </div>
-            <div class="column_6">
-                <h4>tuktuk.widget.<span class="text bold">modal</span> (.css & .js)</h4>
-                <div class="margin-bottom">Modal notifications for any device.</div>
-                <div class="row">
-
-                </div>
-
-            </div>
         </div>
     </section>
 
@@ -604,7 +591,7 @@
          </div>
 
         <div class="row margin-bottom">
-            <div class="column_4 offset_4 text center white">
+            <div class="column_3 offset_4 text center white">
                 <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="responsive rounded margin-bottom"/>
                 <br/>
                 <a href="https://twitter.com/soyjavi" class="twitter-follow-button " data-show-count="true" data-dnt="true">Follow @soyjavi</a>
@@ -616,7 +603,7 @@
 
     <!-- ========================== FOOTER ========================== -->
     <footer class="bck darkest padding text color white">
-        <div class="row ">
+        <div class="row padding-top padding-bottom">
             <div class="column_5">
                 <p class="text bold big">Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a></p>
                 We're a  user experiences company located in <span class="text normal">Bilbao</span>, SP.
