--- a/examples/profile.html
+++ b/examples/profile.html
@@ -57,9 +57,9 @@
     </div>
 </section>
 
-<section class="underline bck contrast">
+<section class="underline bck darkest">
     <div class="row text center">
-        <nav class="group text bold">
+        <nav class="column_12 group text bold">
             <a href="#" class="active"><span class="icon user"></span>item.active</a>
             <a href="#"><span class="icon cube"></span>item</a>
             <a href="#"><span class="icon cube"></span>item</a>
