Changes on modal

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 
           body .devices span {
             font-size: 128px; }
+
+          body .icons .icon {
+            font-size: 32px;
+            width: 44px;
+            display: inline-block;
+            margin: 5px;
+            text-align: center;
+          }
       </style>
 </head>
 
@@ -503,9 +511,8 @@
              </div>
         </div>
         <div class="row margin-top margin-bottom text center">
-            <button class="large column_4" data-tuktuk-modal="default_modal">Default</button>
-            <button class="large column_4 secondary" data-tuktuk-modal="small_modal">column_6</button>
-            <button class="large column_4 alert" data-tuktuk-modal="big_modal">column_8</button>
+            <button class="offset_2 large column_4" data-tuktuk-modal="default_modal">Default</button>
+            <button class="large column_4 alert" data-tuktuk-modal="big_modal">Stilyng modal</button>
         </div>
     </section>
 
@@ -519,45 +526,258 @@
              </div>
         </div>
 
-        <div class="row">
+        <div class="row icons">
             <div class="column_12">
-                <table>
-                    <tbody>
-                        <tr>
-                            <td class="text center">
-                                <span class="icon user"></span>
-                                <span class="icon search"></span>
-                                <span class="icon accept"></span>
-                                <span class="icon cancel"></span>
-                                <span class="icon locked"></span>
-                                <span class="icon cog"></span>
-                                <span class="icon tag"></span>
+                <span class="icon glass"></span>
+                <span class="icon music"></span>
+                <span class="icon search"></span>
+                <span class="icon envelope"></span>
+                <span class="icon heart"></span>
+                <span class="icon star"></span>
+                <span class="icon star-empty"></span>
+                <span class="icon user"></span>
+                <span class="icon film"></span>
+                <span class="icon grid-large"></span>
+                <span class="icon grid"></span>
+                <span class="icon list-th"></span>
+                <span class="icon ok"></span>
+                <span class="icon remove"></span>
+                <span class="icon zoom-in"></span>
+                <span class="icon zoom-out"></span>
+                <span class="icon off"></span>
+                <span class="icon signal"></span>
+                <span class="icon cog"></span>
+                <span class="icon trash"></span>
+                <span class="icon home"></span>
+                <span class="icon file"></span>
+                <span class="icon time"></span>
+                <span class="icon road"></span>
+                <span class="icon download"></span>
+                <span class="icon download-circle"></span>
+                <span class="icon upload-circle"></span>
+                <span class="icon inbox"></span>
+                <span class="icon play-circle"></span>
+                <span class="icon repeat"></span>
+                <span class="icon refresh"></span>
+                <span class="icon list-alt"></span>
+                <span class="icon lock"></span>
+                <span class="icon flag"></span>
+                <span class="icon headphones"></span>
+                <span class="icon volume-off"></span>
+                <span class="icon volume-down"></span>
+                <span class="icon volume-up"></span>
+                <span class="icon qrcode"></span>
+                <span class="icon barcode"></span>
+                <span class="icon tag"></span>
+                <span class="icon tags"></span>
+                <span class="icon book"></span>
+                <span class="icon bookmark"></span>
+                <span class="icon print"></span>
+                <span class="icon camera"></span>
+                <span class="icon font"></span>
+                <span class="icon bold"></span>
+                <span class="icon italic"></span>
+                <span class="icon text-height"></span>
+                <span class="icon text-width"></span>
+                <span class="icon align-left"></span>
+                <span class="icon align-center"></span>
+                <span class="icon align-right"></span>
+                <span class="icon align-justify"></span>
+                <span class="icon list"></span>
+                <span class="icon indent-left"></span>
+                <span class="icon indent-right"></span>
+                <span class="icon video"></span>
+                <span class="icon picture"></span>
+                <span class="icon pencil"></span>
+                <span class="icon map-marker"></span>
+                <span class="icon adjust"></span>
+                <span class="icon tint"></span>
+                <span class="icon edit"></span>
+                <span class="icon share"></span>
+                <span class="icon check"></span>
+                <span class="icon move"></span>
+                <span class="icon step-backward"></span>
+                <span class="icon fast-backward"></span>
+                <span class="icon backward"></span>
+                <span class="icon play"></span>
+                <span class="icon pause"></span>
+                <span class="icon stop"></span>
+                <span class="icon forward"></span>
+                <span class="icon fast-forward"></span>
+                <span class="icon step-forward"></span>
+                <span class="icon eject"></span>
+                <span class="icon chevron-left"></span>
+                <span class="icon chevron-right"></span>
+                <span class="icon plus-sign"></span>
+                <span class="icon minus-sign"></span>
+                <span class="icon remove-sign"></span>
+                <span class="icon ok-sign"></span>
+                <span class="icon question-sign"></span>
+                <span class="icon info-sign"></span>
+                <span class="icon screenshot"></span>
+                <span class="icon remove-circle"></span>
+                <span class="icon ok-circle"></span>
+                <span class="icon ban-circle"></span>
+                <span class="icon arrow-left"></span>
+                <span class="icon arrow-right"></span>
+                <span class="icon arrow-up"></span>
+                <span class="icon arrow-down"></span>
+                <span class="icon share-alt"></span>
+                <span class="icon resize-full"></span>
+                <span class="icon resize-small"></span>
+                <span class="icon plus"></span>
+                <span class="icon minus"></span>
+                <span class="icon asterisk"></span>
+                <span class="icon exclamation-sign"></span>
+                <span class="icon gift"></span>
+                <span class="icon leaf"></span>
+                <span class="icon fire"></span>
+                <span class="icon eye-open"></span>
+                <span class="icon eye-close"></span>
+                <span class="icon warning-sign"></span>
+                <span class="icon plane"></span>
+                <span class="icon calendar"></span>
+                <span class="icon random"></span>
+                <span class="icon comment"></span>
+                <span class="icon magnet"></span>
+                <span class="icon chevron-up"></span>
+                <span class="icon chevron-down"></span>
+                <span class="icon retweet"></span>
+                <span class="icon shopping-cart"></span>
+                <span class="icon folder-close"></span>
+                <span class="icon folder-open"></span>
+                <span class="icon resize-vertical"></span>
+                <span class="icon resize-horizontal"></span>
+                <span class="icon bar-chart"></span>
+                <span class="icon twitter-sign"></span>
+                <span class="icon facebook-sign"></span>
+                <span class="icon camera-retro"></span>
+                <span class="icon key"></span>
+                <span class="icon cogs"></span>
+                <span class="icon comments"></span>
+                <span class="icon thumbs-up"></span>
+                <span class="icon thumbs-down"></span>
+                <span class="icon star-half"></span>
+                <span class="icon heart-empty"></span>
+                <span class="icon signout"></span>
+                <span class="icon linkedin-sign"></span>
+                <span class="icon pushpin"></span>
+                <span class="icon external-link"></span>
+                <span class="icon signin"></span>
+                <span class="icon trophy"></span>
+                <span class="icon github-sign"></span>
+                <span class="icon upload"></span>
+                <span class="icon lemon"></span>
+                <span class="icon phone"></span>
+                <span class="icon check-empty"></span>
+                <span class="icon bookmark-empty"></span>
+                <span class="icon phone-sign"></span>
+                <span class="icon twitter"></span>
+                <span class="icon facebook"></span>
+                <span class="icon github"></span>
+                <span class="icon unlock"></span>
+                <span class="icon credit-card"></span>
+                <span class="icon rss"></span>
+                <span class="icon hdd"></span>
+                <span class="icon bullhorn"></span>
+                <span class="icon bell"></span>
+                <span class="icon certificate"></span>
+                <span class="icon hand-right"></span>
+                <span class="icon hand-left"></span>
+                <span class="icon hand-up"></span>
+                <span class="icon hand-down"></span>
+                <span class="icon left-sign"></span>
+                <span class="icon right-sign"></span>
+                <span class="icon up-sign"></span>
+                <span class="icon down-sign"></span>
+                <span class="icon globe"></span>
+                <span class="icon wrench"></span>
+                <span class="icon tasks"></span>
+                <span class="icon filter"></span>
+                <span class="icon briefcase"></span>
+                <span class="icon fullscreen"></span>
+                <span class="icon group"></span>
+                <span class="icon link"></span>
+                <span class="icon cloud"></span>
+                <span class="icon beaker"></span>
+                <span class="icon cut"></span>
+                <span class="icon copy"></span>
+                <span class="icon paper-clip"></span>
+                <span class="icon save"></span>
+                <span class="icon sign-blank"></span>
+                <span class="icon menu"></span>
+                <span class="icon list-ul"></span>
+                <span class="icon list-ol"></span>
+                <span class="icon strikethrough"></span>
+                <span class="icon underline"></span>
+                <span class="icon table"></span>
+                <span class="icon magic"></span>
+                <span class="icon truck"></span>
+                <span class="icon pinterest"></span>
+                <span class="icon pinterest-sign"></span>
+                <span class="icon google-plus-sign"></span>
+                <span class="icon google-plus"></span>
+                <span class="icon money"></span>
+                <span class="icon caret-down"></span>
+                <span class="icon caret-up"></span>
+                <span class="icon caret-left"></span>
+                <span class="icon caret-right"></span>
+                <span class="icon caret-sort"></span>
+                <span class="icon caret-sort-down"></span>
+                <span class="icon caret-sort-up"></span>
+                <span class="icon columns"></span>
+                <span class="icon envelope-alt"></span>
+                <span class="icon linkedin"></span>
+                <span class="icon undo"></span>
+                <span class="icon legal"></span>
+                <span class="icon dashboard"></span>
+                <span class="icon comment-alt"></span>
+                <span class="icon comments-alt"></span>
+                <span class="icon bolt"></span>
+                <span class="icon sitemap"></span>
+                <span class="icon umbrella"></span>
+                <span class="icon paste"></span>
+                <span class="icon lightbulb"></span>
+                <span class="icon exchange"></span>
+                <span class="icon cloud-download"></span>
+                <span class="icon cloud-upload"></span>
+                <span class="icon user-md"></span>
+                <span class="icon stethoscope"></span>
+                <span class="icon suitcase"></span>
+                <span class="icon bell-alt"></span>
+                <span class="icon coffee"></span>
+                <span class="icon food"></span>
+                <span class="icon file-alt"></span>
+                <span class="icon building"></span>
+                <span class="icon hospital"></span>
+                <span class="icon ambulance"></span>
+                <span class="icon medkit"></span>
+                <span class="icon fighter-jet"></span>
+                <span class="icon beer"></span>
+                <span class="icon h-sign"></span>
+                <span class="icon sign"></span>
+                <span class="icon double-angle-left"></span>
+                <span class="icon double-angle-right"></span>
+                <span class="icon double-angle-up"></span>
+                <span class="icon double-angle-down"></span>
+                <span class="icon angle-left"></span>
+                <span class="icon angle-right"></span>
+                <span class="icon angle-up"></span>
+                <span class="icon angle-down"></span>
+                <span class="icon desktop"></span>
+                <span class="icon laptop"></span>
+                <span class="icon tablet"></span>
+                <span class="icon mobile-phone"></span>
+                <span class="icon circle-blank"></span>
+                <span class="icon quote-left"></span>
+                <span class="icon quote-right"></span>
+                <span class="icon spinner"></span>
+                <span class="icon circle"></span>
+                <span class="icon reply"></span>
+                <span class="icon github-alt"></span>
+                <span class="icon folder-close-alt"></span>
+                <span class="icon folder-open-alt"></span>
 
-                                <span class="icon share"></span>
-                                <span class="icon twitter"></span>
-                                <span class="icon facebook"></span>
-                                <span class="icon github"></span>
-                                <span class="icon wordpress"></span>
-                                <span class="icon dribbble"></span>
-
-                                <span class="icon html5"></span>
-                                <span class="icon css3"></span>
-                                <span class="icon chrome"></span>
-                                <span class="icon firefox"></span>
-                                <span class="icon IE"></span>
-                                <span class="icon opera"></span>
-                                <span class="icon safari"></span>
-
-                                <span class="icon heart"></span>
-                                <span class="icon star"></span>
-                                <span class="icon paper-plane"></span>
-                                <span class="icon ok"></span>
-                                <span class="icon upload"></span>
-                                <span class="icon download"></span>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
             </div>
         </div>
     </section>
@@ -603,33 +823,27 @@
 
 
     <!-- ========================== MODALS ========================== -->
-    <div id="default_modal" data-tuktuk="modal">
+    <div id="default_modal" data-tuktuk="modal"  class="column_5">
         <header>
-            <h5 class="text bold">Default modal window</h5>
+            <h4 class="text thin">Default modal window</h4>
         </header>
-        <div class="margin-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
+        <article>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.
+        </article>
         <footer>
-            <button data-modal="close" class="button">Cancel</button>
-        </footer>
-    </div>
-
-    <div id="small_modal" data-tuktuk="modal" class="column_6">
-        <header>
-            <h5 class="text bold">Small modal window</h5>
-        </header>
-        <div class="margin-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
-        <footer>
-            <button data-modal="close" class="button anchor">Cancel</button>
+            <button data-modal="close" class="anchor"><span class="icon remove"></span>Close</button>
         </footer>
     </div>
 
     <div id="big_modal" data-tuktuk="modal" class="column_8">
-        <header>
-            <h5 class="text bold">Big modal window</h5>
+        <header class="bck alert">
+            <h4 class="text thin inline">Header with <strong>.bck .alert</strong> class</h4>
+            <button data-modal="close" class="transparent small on-right inline icon remove"></button>
         </header>
-        <div class="margin-bottom text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
+        <article class="text big">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</article>
         <footer>
-            <button data-modal="close" class="button large">Cancel</button>
+            <button data-modal="close" class="button large secondary"><span class="icon ok"></span>Accept</button>
+            <button data-modal="close" class="button  alert"><span class="icon remove"></span>Cancel</button>
         </footer>
     </div>
 
